Fix margin issue on tablets for signup button div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,12 +52,14 @@ h3 {
     box-shadow: 2px 2px 5px rgb(76, 74, 74);
 }
 
+
 .button-center {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
 }
+
 
 /*Header*/
 header {
@@ -161,8 +163,9 @@ main {
     bottom: 100px;
 }
 
-.hero-button button {
+.button {
     width: 200px;
+    text-align: center;
 }
 
 /*Course overview section*/
@@ -325,7 +328,7 @@ footer address {
 @media screen and (min-width: 768px) {
 
     /*General styles*/
-    button {
+    .button {
         padding: 13px 16px;
     }
 
@@ -393,9 +396,10 @@ footer address {
         padding: 40px 30px;
     }
 
-    .hero-button button {
+    .button {
         width: 220px;
         font-size: 1.4rem;
+        margin-top: 5px;
     }
 
     /*Course overview section*/
